Alignment Fix

--- a/Website/Development/src/Components/AboutUsPage.css
+++ b/Website/Development/src/Components/AboutUsPage.css
@@ -13,12 +13,10 @@
 {
     display: flex;
     flex-direction: row;
-    flex-wrap: ;
     
-    /* background-color: rgb(133, 58, 58); */
-   
-   
+    /* background-color: rgb(133, 58, 58); */ 
 }
+
 .aboutpage-sub-container-details
 {
     display: flex;
@@ -27,6 +25,7 @@
     /* background-color: rgb(103, 102, 28);
      */
 }
+
 .aboutPage-sub-container-gridBox-text
 {
     display: flex;
@@ -34,56 +33,54 @@
     background-color: #EAC435; ;
     width: 250px;
     height: 153px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    margin-left: 20px;
-    margin-right: 20px;
     justify-content: center;
     align-content: center;
     align-items: center;
     border-radius: 10px; 
     flex-wrap: wrap;
 }
+
 .aboutPage-img-prop
 {
-    width: 90%;
-  height: 90%;
-  margin-top: 30px;
+    width: 95%;
+    height: 80%;
+    margin-top: 30px;
   
-  box-shadow: -10px 10px #FF4343;
-  border-radius: 5px;
+    box-shadow: -10px 10px #FF4343;
+    border-radius: 5px;
 }
 
 .aboutPage-badge-text
 {
     font-size: 20px;
-    text-align: center;
-    margin-top: 5px;
     color: #EAC435;
-    border-radius: 5px;
     font-family: 'Ubuntu', sans-serif;
-    
-
 }
+
+
 .aboutPage-badge-img-prop
 {
-    margin-left: 20px;
-    margin-top: 5px;
     height: 28px;
     width: 31px;
+    margin-right: 2%;
 }
+
 .aboutPage-button
 {
     display: flex;
+    width: 25%;
     flex-direction: row;
-    flex: 1;
     background-color: #16262E;
-    margin-left: 50px;
-    margin-right: 50px;
     border-radius: 5px;
     align-content: center;
     justify-content: center;
     justify-items: center;
     align-items: center;
     flex-wrap: wrap;
+}
+
+.aboutpage-gridBox-main-container{
+    display: flex;
+    width: 96.5%;
+    justify-content: space-between;
 }
